<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="EditProfileAlertDialogue">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="Name"
        android:textColorHint="@color/OnSurface"
        android:textColor="@color/OnSurface"/>

    <EditText
        android:id="@+id/edit_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="Contact"
        android:textColorHint="@color/OnSurface"
        android:textColor="@color/OnSurface"/>

    <EditText
        android:id="@+id/edit_homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="Homepage"
        android:textColorHint="@color/OnSurface"
        android:textColor="@color/OnSurface"/>

</LinearLayout>