...
            android:textStyle="bold"
            android:layout_centerInParent="true">
        </TextView>

        <!-- Edit Profile Icon openai, 2024, chatgpt, how to center the title and icon-->
        <ImageView
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/sharp_edit_square_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingEnd="10dp"
...
