...
                android:text="@string/add_photo"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_from_photos"
                android:padding="12dp"
                android:textSize="16sp"
                android:layout_marginBottom="14dp"
...
